# note-refinery-simple

./: .env.example  .gitignore  README.md  note_refinery.yaml.example  pyproject.toml
docs/superpowers/plans/: 2026-06-24-15-20-batch-review-per-file-patch-topic-guard-plan.md  2026-06-24-23-48-incremental-image-cache-stage-symmetry-plan.md  2026-06-25-00-14-folder-review-concurrency-ssot-symmetry-plan.md  2026-06-27-15-30-lazy-batch-map-reduce-plan.md  2026-07-04-16-08-lecture-source-input-expansion-plan.md
docs/superpowers/specs/: 2026-06-24-15-05-batch-review-per-file-patch-topic-guard-spec.md  2026-06-24-23-40-incremental-image-cache-stage-symmetry-spec.md  2026-06-25-00-09-folder-review-concurrency-ssot-symmetry-spec.md  2026-06-27-15-24-lazy-batch-map-reduce-spec.md  2026-07-04-15-59-lecture-source-input-expansion-spec.md
note_refinery_simple/: __init__.py  __main__.py  cli.py  config.py  llm.py  pipeline.py  prompts.py
prompts/base/: image_system.md  system.md
prompts/profiles/default/: image_user.md  patch.md  review.md  synthesize.md  verify.md
prompts/profiles/strict/: image_user.md  patch.md  review.md  synthesize.md  verify.md
tests/: test_cli.py  test_config.py  test_llm.py  test_pipeline.py  test_prompts.py
