[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "note-refinery-simple"
version = "0.1.0"
description = "Small CLI for reviewing, patching, and verifying markdown class notes with OpenAI-compatible models."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hoang Phi Long Dang" }
]

[tool.setuptools]
packages = ["note_refinery_simple"]
